--- a/app/views/seminare/show.html.slim
+++ b/app/views/seminare/show.html.slim
@@ -61,7 +61,7 @@
 
 .row.action-buttons
   .col-md-4
-    = link_to 'Anmelden', new_booking_url(seminar_id: @seminar.id), class: 'btn btn-primary btn-block btn-lg'
+    = link_to 'Anmelden', buchung_new_url(seminar_id: @seminar.id), class: 'btn btn-primary btn-block btn-lg'
 
 sass:
   .action-buttons
