--- a/app/views/bookings/new.html.slim
+++ b/app/views/bookings/new.html.slim
@@ -7,30 +7,13 @@
       span.sr-only Close
     h4 = t('.error')
 
-- unless user_signed_in?
+h3
+  => link_to @seminar.number, @seminar
+  | -
+  =< @seminar.title
+  br
+  small = @seminar.subtitle
 
-  h3 Ich melde mich verbindlich für folgende Veranstaltung an:
-
-  .row
-    .col-md-2: label Seminarnr.
-    .col-md-6: strong = @seminar.number
-  .row
-    .col-md-2: label Titel
-    .col-md-6 = @seminar.title
-  .row
-    .col-md-2
-    .col-md-6 = @seminar.subtitle
-  .row
-    .col-md-2: label Datum
-    .col-md-6 = @seminar.dates.map { |date| ldate date }.join('; ').html_safe
-  .row
-    .col-md-2: label Zeit
-    .col-md-6 = @seminar.events.map(&:time).uniq.compact.join('; ').html_safe
-  .row
-    .col-md-2: label Ort
-    .col-md-6 = @seminar.location&.name
-  .row
-    .col-md-2: label Gebühr
-    .col-md-6 = @seminar.price_text&.html_safe
-
-= render 'form'
+.row style="padding-top: 30px"
+  .col-md-8 = render 'form'
+  .col-md-3.col-md-offset-1 = render 'seminar'
