fix external page title

--- a/app/views/layouts/external.html.slim
+++ b/app/views/layouts/external.html.slim
@@ -3,7 +3,7 @@ html
   head
     meta[name="viewport" content="width=device-width, initial-scale=1.0"]
     title
-      | Paritätischen Bildungswerkes Sachsen-Anhalt
+      | Paritätisches Bildungswerk Sachsen-Anhalt
       - if content_for? :page_title
         | -
         =< content_for :page_title
