--- a/app/views/bookings/_form.html.slim
+++ b/app/views/bookings/_form.html.slim
@@ -20,10 +20,16 @@
     legend Arbeitgeber
     .row
       .col-md-6 = f.input :company_title
+      .col-md-6 = f.association :company,
+        label_method: ->(c){ "#{c.code} - #{c.name}, #{c.city}" },
+        collection: Company.order(:name),
+        input_html: { class: 'select2' }
+
     .row
-      .col-md-5 = f.input :company_street
+      .col-md-6 = f.input :company_street
+    .row
       .col-md-2 = f.input :company_zip,  as: :tel
-      .col-md-5 = f.input :company_city
+      .col-md-4 = f.input :company_city
 
   fieldset
     legend Kontakt
