--- a/app/views/bookings/_form.html.slim
+++ b/app/views/bookings/_form.html.slim
@@ -44,7 +44,7 @@
   fieldset
     legend = Booking.human_attribute_name(:invoice_address)
     .row
-      .col-md-6 = f.input :invoice_title
+      .col-md-6 = f.input :invoice_title, as: :text, input_html: { rows: 4 }
     .row
       .col-md-5 = f.input :invoice_street
       .col-md-2 = f.input :invoice_zip,  as: :tel
