--- a/app/views/bookings/_form.html.slim
+++ b/app/views/bookings/_form.html.slim
@@ -20,18 +20,19 @@
     legend Arbeitgeber
     .row
       .col-md-6
-        = f.input :company_title
+        = f.input :company_title, as: :text, input_html: { rows: 2 }
         = f.input :company_street
         .row
           .col-md-4 = f.input :company_zip,  as: :tel
           .col-md-8 = f.input :company_city
 
-      .col-md-6 = f.association :company,
-        label_method: ->(c){ "#{c.code} - #{c.name}, #{c.city}" },
-        collection: Company.order(:name),
-        input_html: { class: 'select2' },
-        label: 'Firma'
-
+      .col-md-6
+        = f.association :company,
+          label_method: ->(c){ "#{c.name} #{c.name2}, #{c.city}" },
+          collection: Company.order(:name),
+          input_html: { class: 'select2' },
+          label: 'Firma'
+        .display-company-address
 
   fieldset
     legend Kontakt
@@ -44,7 +45,7 @@
   fieldset
     legend = Booking.human_attribute_name(:invoice_address)
     .row
-      .col-md-6 = f.input :invoice_title, as: :text, input_html: { rows: 4 }
+      .col-md-9 = f.input :invoice_title, as: :text, input_html: { rows: 4 }
     .row
       .col-md-5 = f.input :invoice_street
       .col-md-2 = f.input :invoice_zip,  as: :tel
@@ -71,6 +72,18 @@ coffee:
       attendee.toggleClass('hidden', hidden)
       attendee.find('.booking_attendees__destroy input').val(hidden)
 
+    fill_invoice_address = (company_id) ->
+      $.getJSON "/companies/#{company_id}.json", (company) ->
+        title = company.name
+        title = "#{title}\n#{company.name2}" if company.name2 isnt null
+        $('.display-company-address').html "#{title}<br>#{company.street}<br>#{company.zip} #{company.city}"
+        #if confirm('Rechnungsadresse überschreiben?')
+        #  for scope in ['company', 'invoice']
+        #    $("#booking_#{scope}_title").val title
+        #    $("#booking_#{scope}_street").val company.street
+        #    $("#booking_#{scope}_zip").val company.zip
+        #    $("#booking_#{scope}_city").val company.city
+
     $('.attendee.new-record').addClass('hidden')
     $('.add-attendee').on 'click', (event) ->
       event.preventDefault()
@@ -89,6 +102,9 @@ coffee:
       $('#booking_school, #booking_year').attr('disabled', disabled)
 
     $('#booking_graduate').change()
+
+    $('#booking_company_id').change ->
+      fill_invoice_address $(this).val()
 
 
 sass:
