--- a/app/views/bookings/_form.html.slim
+++ b/app/views/bookings/_form.html.slim
@@ -45,11 +45,11 @@
   fieldset
     legend = Booking.human_attribute_name(:invoice_address)
     .row
-      .col-md-9 = f.input :invoice_title, as: :text, input_html: { rows: 4 }
+      .col-md-9 = f.input :invoice_title, as: :text, input_html: { rows: 4 }, placeholder: 'Firmanname / Name'
     .row
-      .col-md-5 = f.input :invoice_street
-      .col-md-2 = f.input :invoice_zip,  as: :tel
-      .col-md-5 = f.input :invoice_city
+      .col-md-5 = f.input :invoice_street, placeholder: 'Straße/Nr'
+      .col-md-2 = f.input :invoice_zip,  as: :tel, placeholder: 'PLZ'
+      .col-md-5 = f.input :invoice_city, placeholder: 'Ort'
 
   fieldset
     legend Paritätische
